[gd_scene load_steps=7 format=2]

[ext_resource path="res://asparagus_minion.gd" type="Script" id=1]
[ext_resource path="res://Assets/asparagus_man.png (2).png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "aggro",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="CircleShape2D" id=3]
radius = 153.003

[sub_resource type="CircleShape2D" id=4]
radius = 9.05539

[node name="asparagus_minion" type="KinematicBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
z_index = 5
frames = SubResource( 5 )
animation = "aggro"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = -11
shape = SubResource( 3 )

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource( 4 )

[node name="hit_timer" type="Timer" parent="."]
one_shot = true

[node name="name_teg" type="Label" parent="."]
margin_left = -31.0
margin_top = -25.0
margin_right = 32.0
margin_bottom = -11.0
text = "asparagus"

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
